# instagram-saas

./: .env.example  .gitignore  CLAUDE.md  NEXT-ITERATION.md  docker-compose.yml
.claude/: launch.json
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: analytics.py  billing.py  generate.py  hashtags.py  health.py  media.py  posting.py  strategy.py
backend/app/billing/: enforcer.py
backend/app/generators/: ai_image.py  ai_video.py  caption_generator.py  compositor.py  image_generator.py  instagram_scraper.py  strategy_ai.py
backend/app/instagram/: publisher.py  token_manager.py  uploader.py
backend/app/models/: __init__.py  brand.py  content.py  strategy.py  user.py
backend/app/quality/: gate.py
backend/app/tasks/: analytics.py  celery_app.py  posting.py  strategy.py  token_refresh.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/.claude/: launch.json
frontend/prisma/: prisma.config.ts  schema.prisma
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/data-deletion/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/queue/: page.tsx
frontend/src/components/: kuraite-logo.tsx  page-transition.tsx
frontend/src/lib/: auth.ts  backend-client.ts  constants.ts  db.ts  instagram-token.ts  rate-limit.ts
sample-posts/glowlab/: post-1-skin-science-carousel.html  post-2-farm-to-face-reel.html  post-3-glow-transformation-reel.html
(+129 files in other folders)
